2007-03-21  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-navigation-window.c: (notebook_switch_page_cb): Reuse
	nautilus_window_get_slot_for_content_box().

2007-03-21  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-window-manage-views.[ch]:
	* src/nautilus-window.[ch]:
	Disconnect location change code when closing slot, rather than at
	window finalization time. Also assert() that all views are destroyed in
	finalize(), since the window's close() function must have run.

2007-03-21  Christian Neumair  <cneumair@gnome.org>

	* libnautilus-private/nautilus-window-info.h:
	Add NAUTILUS_WINDOW_OPEN_FLAG_NEW_TAB to NautilusWindowOpenFlags.

	* src/nautilus-window-slot.[ch]: 
	* src/nautilus-navigation-window-slot.[ch]:
	* src/*.[ch]:
	Add code for handling back/forward lists, add get_close_successor()
	API for determining which slot will follow the current one before
	close.
	Add nautilus_window_slot_go_to(_location) defines and use them in the
	window "go to" code.
	Properly destroy slots and views when closing slot.
	Add "New Tab" menu item.
	Beginnings of notebook tab handling.
	Some more minor fixes and comments.

2008-03-21  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-places-sidebar.c: (update_places):
	Use eel_strcp() instead of strcmp().

2008-03-20  Chrisian Neumair  <cneumair@gnome.org>

	* src/*.[ch]:
	* libnautilus-private/*.[ch]:

	Added:
	* src/nautilus-window-slot.[ch]:
	* src/nautilus-navigation-window-slot.[ch]:
	* libnautilus-private/nautilus-window-slot-info.[ch]:

	Add initial implementation of view slots, port all the
	existing view switching code to it.

	Each slot corresponds to a location that can be used to
	display view widgets.

	A slot contains all view-specific data, and connects
	windows, sidebar panels and views.

	For now, all Nautilus windows just have one slot. The
	idea is that navigation windows will have a tabbed interfaces,
	and each slot will be corresponde to a separate tab.
