@@ -729,16 +729,18 @@ void
 nautilus_window_close (NautilusWindow *window)
 {
 	NautilusWindowSlot *slot;
-	GList *l;
+	GList *l, *slots;
 
 	g_return_if_fail (NAUTILUS_IS_WINDOW (window));
 
 	nautilus_window_set_active_slot (window, NULL);
 
-	for (l = window->details->slots; l != NULL; l = l->next) {
+	slots = g_list_copy (window->details->slots);
+	for (l = slots; l != NULL; l = l->next) {
 		slot = NAUTILUS_WINDOW_SLOT (l->data);
 		nautilus_window_close_slot (window, slot);
 	}
+	g_list_free (slots);
 
 	EEL_CALL_METHOD (NAUTILUS_WINDOW_CLASS, window,
 			 close, (window));
